--- a/index.html
+++ b/index.html
@@ -1,115 +1,157 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>worddev - GitHub Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #24292f;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      margin-top: 2rem;
+    }
+    details {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      margin-bottom: 1.5rem;
+      padding: 1rem;
+    }
+    summary {
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+    .badges img {
+      margin: 4px;
+    }
+    footer {
+      text-align: center;
+      background: #24292f;
+      color: white;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body>
 
-<details>
-<summary>🇬🇧 Welcome to worddev on GitHub! (click to expand)</summary>
+<header>
+  <h1>🌍 worddev GitHub Page</h1>
+  <p>Open Source • IT • Development</p>
+</header>
 
-# Welcome to worddev! 👋
+<main>
 
-We are a team of enthusiasts passionate about IT, software development, and the Open Source philosophy. Our mission is to make technology accessible and powerful, leveraging the strength of collaboration for human-sized projects.
+  <section>
+    <details>
+      <summary>🇬🇧 Welcome to worddev on GitHub! (click to expand)</summary>
+      <h2>Welcome to worddev! 👋</h2>
+      <p>
+        We are a team of enthusiasts passionate about IT, software development, and the Open Source philosophy.
+        Our mission is to make technology accessible and powerful, leveraging the strength of collaboration for human-sized projects.
+      </p>
 
----
+      <h3>🛠️ Our Favorite Tools, Technologies & Solutions</h3>
+      <div class="badges">
+        <img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+        <img src="https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white" alt="Proxmox">
+        <img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+        <img src="https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white" alt="Bash">
+        <img src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" alt="PHP">
+        <img src="https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white" alt="Go">
+        <img src="https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white" alt="Mailcow">
+        <img src="https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white" alt="SOGo">
+        <img src="https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white" alt="Roundcube">
+        <img src="https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white" alt="Hetzner">
+      </div>
 
-### 🛠️ Our Favorite Tools, Technologies & Solutions
+      <h3>🚀 What We Offer</h3>
+      <ul>
+        <li><b>Open Source Solution Integration</b>: We help you deploy and configure the best open-source tools tailored to your scale.</li>
+        <li><b>Custom Development</b>: We transform your ideas into robust and scalable software solutions.</li>
+        <li><b>Consulting & Technical Expertise</b>: Our experience is at your service to guide you through your technological choices.</li>
+      </ul>
 
-![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
-![Proxmox](https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white)
-![Docker](https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white)
-![Bash](https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white)
-![PHP](https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white)
-![Go](https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white)
-![Mailcow](https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white)
-![SOGo](https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white)
-![Roundcube](https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white)
-![Hetzner](https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white)
+      <h3>⭐ Our Flagship Project: Mailcow High Availability</h3>
+      <p>
+        Our core business is designing robust and reliable <b>email solutions</b>.  
+        Discover our <a href="https://github.com/worddevfr/mailcow-high-availability" target="_blank">Mailcow High Availability</a> project.
+      </p>
 
----
+      <h3>💬 Let's Talk About Your Project</h3>
+      <p>
+        📧 E-mail: <span style="font-weight: bold;">mailcowisp@gmail.com</span>
+      </p>
+    </details>
 
-### 🚀 What We Offer
+    <details open>
+      <summary>🇫🇷 Bienvenue sur worddev ! (cliquer pour déplier)</summary>
+      <h2>Bienvenue sur le profil de worddev ! 👋</h2>
+      <p>
+        Nous sommes une équipe de passionnés par l'informatique, le développement logiciel et la philosophie Open Source.
+        Notre mission est de rendre la technologie accessible et performante, en nous appuyant sur la puissance de la collaboration pour des projets à taille humaine.
+      </p>
 
-We specialize in supporting human-sized projects by offering tailored services to meet your specific needs.
+      <h3>🛠️ Nos Outils, Technologies & Solutions de prédilection</h3>
+      <div class="badges">
+        <img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+        <img src="https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white" alt="Proxmox">
+        <img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+        <img src="https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white" alt="Bash">
+        <img src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" alt="PHP">
+        <img src="https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white" alt="Go">
+        <img src="https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white" alt="Mailcow">
+        <img src="https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white" alt="SOGo">
+        <img src="https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white" alt="Roundcube">
+        <img src="https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white" alt="Hetzner">
+      </div>
 
-*   **Open Source Solution Integration**: We help you deploy and configure the best open-source tools tailored to your scale, whether you are an individual, a small business, or an association.
-*   **Custom Development**: We transform your ideas into robust and scalable software solutions.
-*   **Consulting & Technical Expertise**: Our experience is at your service to guide you through your technological choices.
+      <h3>🚀 Ce que nous proposons</h3>
+      <ul>
+        <li><b>Intégration de Solutions Open Source</b> : Nous vous aidons à déployer et configurer les meilleurs outils open source.</li>
+        <li><b>Développement sur Mesure</b> : Nous transformons vos idées en solutions logicielles robustes et évolutives.</li>
+        <li><b>Conseil & Expertise Technique</b> : Notre expérience est à votre service pour vous guider dans vos choix technologiques.</li>
+      </ul>
 
----
+      <h3>⭐ Notre Projet Phare : Mailcow Haute Disponibilité</h3>
+      <p>
+        Notre cœur de métier est la conception de solutions de messagerie robustes et fiables.  
+        Découvrez notre <a href="https://github.com/worddevfr/mailcow-high-availability" target="_blank">Mailcow High Availability</a>.
+      </p>
 
-### ⭐ Our Flagship Project: Mailcow High Availability
+      <h3>💬 Parlons de votre projet</h3>
+      <p>
+        📧 E-mail : <span style="font-weight: bold;">mailcowisp@gmail.com</span>
+      </p>
+    </details>
+  </section>
 
-Our core business is designing robust and reliable **email solutions**. That's why we created and now maintain a **High Availability solution for Mailcow**.
+</main>
 
-This project, based on [mailcow](https://github.com/mailcow/mailcow-dockerized), ensures exceptional service continuity and reliability for email infrastructures. ***While email is our specialty, our curiosity drives us to explore all kinds of stimulating projects!***
+<footer>
+  <p>© 2025 worddev • Powered by GitHub Pages</p>
+</footer>
 
-➡️ **Discover the project: [Mailcow High Availability](https://github.com/worddevfr/mailcow-high-availability)**
-
----
-
-### 💬 Let's Talk About Your Project
-
-We are always open to new collaborations. If you have an idea, a specific need, or just want to chat, feel free to contact us.
-
-   &nbsp; &nbsp; **📧 E-mail**: <!-- <header> -->
-<span style="font-weight: bold; font-size: 18px;">
-&#109;&#97;&#105;<!-- &#1 -->&#108;&#99;<!-- <br> && \n ok -->&#111;&#119;&#105;</span><!-- </header> --><!-- <footer> --><span style="font-weight: bold; font-size: 16px;"><!-- &#{0-9}; -->&#115;&#112;<!-- Github profil start  with -->&#64;<!-- domaine -->&#103;&#109;&#97;<!-- domain.tld -->&#105;&#108;<!-- point -->&#46;<!-- &#{0-9}; -->&#99;<!-- ext: .com, .org -->&#111;&#109;
-</span>
-<!-- </footer> -->
-<br>
-</details>
-
-<br>
-
-<details open>
-  
-<summary>🇫🇷 Bienvenue sur worddev ! (cliquer pour déplier)</summary>
-
-# Bienvenue sur le profil de worddev ! 👋
-
-Nous sommes une équipe de passionnés par l'informatique, le développement logiciel et la philosophie Open Source. Notre mission est de rendre la technologie accessible et performante, en nous appuyant sur la puissance de la collaboration pour des projets à taille humaine.
-
----
-
-### 🛠️ Nos Outils, Technologies & Solutions de prédilection
-
-![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
-![Proxmox](https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white)
-![Docker](https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white)
-![Bash](https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white)
-![PHP](https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white)
-![Go](https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white)
-![Mailcow](https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white)
-![SOGo](https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white)
-![Roundcube](https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white)
-![Hetzner](https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white)
-
----
-
-### 🚀 Ce que nous proposons
-
-Nous nous spécialisons dans l'accompagnement de projets à taille humaine, en proposant des services sur mesure pour répondre à vos besoins spécifiques.
-
-*   **Intégration de Solutions Open Source** : Nous vous aidons à déployer et configurer les meilleurs outils open source, adaptés à votre échelle, que vous soyez un particulier, une TPE/PME ou une association.
-*   **Développement sur Mesure** : Nous transformons vos idées en solutions logicielles robustes et évolutives.
-*   **Conseil & Expertise Technique** : Notre expérience est à votre service pour vous guider dans vos choix technologiques.
-
----
-
-### ⭐ Notre Projet Phare : Mailcow Haute Disponibilité
-
-Notre cœur de métier est la **conception de solutions de messagerie** robustes et fiables. C'est pourquoi nous avons créé et nous maintenons une solution de **Mailcow en Haute Disponibilité**.
-
-Ce projet, basé sur [mailcow](https://github.com/mailcow/mailcow-dockerized), garantit une continuité de service et une fiabilité exceptionnelles pour les infrastructures de messagerie. ***Bien que la messagerie soit notre domaine de prédilection, notre curiosité nous pousse à explorer tous types de projets stimulants !***
-
-➡️ **Découvrez le projet : [Mailcow High Availability](https://github.com/worddevfr/mailcow-high-availability)**
-
----
-
-### 💬 Parlons de votre projet
-
-Nous sommes toujours ouverts à de nouvelles collaborations. Si vous avez une idée, un besoin spécifique ou si vous souhaitez simplement échanger, n'hésitez pas à nous contacter.
-
-   &nbsp; &nbsp; **📧 E-mail**: <!-- <header> -->
-<span style="font-weight: bold; font-size: 18px;">
-&#109;&#97;&#105;<!-- &#1 -->&#108;&#99;<!-- <br> && \n ok -->&#111;&#119;&#105;</span><!-- </header> --><!-- <footer> --><span style="font-weight: bold; font-size: 16px;"><!-- &#{0-9}; -->&#115;&#112;<!-- Github profil start  with -->&#64;<!-- domaine -->&#103;&#109;&#97;<!-- domain.tld -->&#105;&#108;<!-- point -->&#46;<!-- &#{0-9}; -->&#99;<!-- ext: .com, .org -->&#111;&#109;
-</span>
-<!-- </footer> -->
-
-</details>
+</body>
+</html>
