--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>worddev - GitHub Page</title>
+  <title>worddevfr</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 <body>
 
 <header>
-  <h1>🌍 worddev GitHub Page</h1>
+  <h1>🌍 worddevfr</h1>
   <p>Open Source • IT • Development</p>
 </header>
 
