--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>worddev GitHub</title>
+<title>worddevfr</title>
 <style>
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 20px;
+  }
+  h1, h2, h3 {
+    margin-top: 1em;
   }
   summary {
     cursor: pointer;
@@ -19,131 +22,176 @@
   details {
     margin-bottom: 20px;
   }
+  hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+  }
+  img {
+    margin: 2px 2px 2px 0;
+  }
 </style>
 </head>
 <body>
 
-<details>
-<summary>🇬🇧 Welcome to worddev on GitHub! (click to expand)</summary>
+<details id="english-menu">
+<summary>🇬🇧 Welcome to worddevfr on GitHub! (click to expand)</summary>
 
-# Welcome to worddev! 👋
+<h1>Welcome to worddevfr! 👋</h1>
 
-We are a team of enthusiasts passionate about IT, software development, and the Open Source philosophy. Our mission is to make technology accessible and powerful, leveraging the strength of collaboration for human-sized projects.
+<p>We are a team of enthusiasts passionate about IT, software development, and the Open Source philosophy. Our mission is to make technology accessible and powerful, leveraging the strength of collaboration for human-sized projects.</p>
 
----
+<hr>
 
-### 🛠️ Our Favorite Tools, Technologies & Solutions
+<h3>🛠️ Our Favorite Tools, Technologies & Solutions</h3>
 
-![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
-![Proxmox](https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white)
-![Docker](https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white)
-![Bash](https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white)
-![PHP](https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white)
-![Go](https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white)
-![Mailcow](https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white)
-![SOGo](https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white)
-![Roundcube](https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white)
-![Hetzner](https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white)
+<p>
+<img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+<img src="https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white" alt="Proxmox">
+<img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+<img src="https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white" alt="Bash">
+<img src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" alt="PHP">
+<img src="https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white" alt="Go">
+<img src="https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white" alt="Mailcow">
+<img src="https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white" alt="SOGo">
+<img src="https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white" alt="Roundcube">
+<img src="https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white" alt="Hetzner">
+</p>
 
----
+<hr>
 
-### 🚀 What We Offer
+<h3>🚀 What We Offer</h3>
+<ul>
+<li><strong>Open Source Solution Integration</strong>: We help you deploy and configure the best open-source tools tailored to your scale, whether you are an individual, a small business, or an association.</li>
+<li><strong>Custom Development</strong>: We transform your ideas into robust and scalable software solutions.</li>
+<li><strong>Consulting & Technical Expertise</strong>: Our experience is at your service to guide you through your technological choices.</li>
+</ul>
 
-We specialize in supporting human-sized projects by offering tailored services to meet your specific needs.
+<hr>
 
-*   **Open Source Solution Integration**: We help you deploy and configure the best open-source tools tailored to your scale, whether you are an individual, a small business, or an association.
-*   **Custom Development**: We transform your ideas into robust and scalable software solutions.
-*   **Consulting & Technical Expertise**: Our experience is at your service to guide you through your technological choices.
+<h3>⭐ Our Flagship Project: Mailcow High Availability</h3>
 
----
+<p>Our core business is designing robust and reliable <strong>email solutions</strong>. That's why we created and now maintain a <strong>High Availability solution for Mailcow</strong>.</p>
 
-### ⭐ Our Flagship Project: Mailcow High Availability
+<p>This project, based on <a href="https://github.com/mailcow/mailcow-dockerized">mailcow</a>, ensures exceptional service continuity and reliability for email infrastructures. <em>While email is our specialty, our curiosity drives us to explore all kinds of stimulating projects!</em></p>
 
-Our core business is designing robust and reliable **email solutions**. That's why we created and now maintain a **High Availability solution for Mailcow**.
+<p>➡️ <strong>Discover the project: <a href="https://github.com/worddevfr/mailcow-high-availability">Mailcow High Availability</a></strong></p>
 
-This project, based on [mailcow](https://github.com/mailcow/mailcow-dockerized), ensures exceptional service continuity and reliability for email infrastructures. ***While email is our specialty, our curiosity drives us to explore all kinds of stimulating projects!***
+<hr>
 
-➡️ **Discover the project: [Mailcow High Availability](https://github.com/worddevfr/mailcow-high-availability)**
+<h3>💬 Let's Talk About Your Project</h3>
 
----
+<p>We are always open to new collaborations. If you have an idea, a specific need, or just want to chat, feel free to contact us.</p>
 
-### 💬 Let's Talk About Your Project
-
-We are always open to new collaborations. If you have an idea, a specific need, or just want to chat, feel free to contact us.
-
-   &nbsp; &nbsp; **📧 E-mail**: <!-- <header> -->
+<p>&nbsp;&nbsp; <strong>📧 E-mail</strong>: <span style="font-weight: bold; font-size: 18px;">
+<!-- <header> -->
 <span style="font-weight: bold; font-size: 18px;">
 &#109;&#97;&#105;<!-- &#1 -->&#108;&#99;<!-- <br> && \n ok -->&#111;&#119;&#105;</span><!-- </header> --><!-- <footer> --><span style="font-weight: bold; font-size: 16px;"><!-- &#{0-9}; -->&#115;&#112;<!-- Github profil start  with -->&#64;<!-- domaine -->&#103;&#109;&#97;<!-- domain.tld -->&#105;&#108;<!-- point -->&#46;<!-- &#{0-9}; -->&#99;<!-- ext: .com, .org -->&#111;&#109;
 </span>
 <!-- </footer> -->
-<br>
+</span></p>
+
 </details>
 
-<br>
+<details id="french-menu" open>
+<summary>🇫🇷 Bienvenue sur worddevfr ! (cliquer pour déplier)</summary>
 
-<details open>
-<summary>🇫🇷 Bienvenue sur worddev ! (cliquer pour déplier)</summary>
+<h1>Bienvenue sur worddevfr ! 👋</h1>
 
-# Bienvenue sur le profil de worddev ! 👋
+<p>Nous sommes une équipe de passionnés par l'informatique, le développement logiciel et la philosophie Open Source. Notre mission est de rendre la technologie accessible et performante, en nous appuyant sur la puissance de la collaboration pour des projets à taille humaine.</p>
 
-Nous sommes une équipe de passionnés par l'informatique, le développement logiciel et la philosophie Open Source. Notre mission est de rendre la technologie accessible et performante, en nous appuyant sur la puissance de la collaboration pour des projets à taille humaine.
+<hr>
 
----
+<h3>🛠️ Nos Outils, Technologies & Solutions de prédilection</h3>
 
-### 🛠️ Nos Outils, Technologies & Solutions de prédilection
+<p>
+<img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+<img src="https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white" alt="Proxmox">
+<img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+<img src="https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white" alt="Bash">
+<img src="https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white" alt="PHP">
+<img src="https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white" alt="Go">
+<img src="https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white" alt="Mailcow">
+<img src="https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white" alt="SOGo">
+<img src="https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white" alt="Roundcube">
+<img src="https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white" alt="Hetzner">
+</p>
 
-![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
-![Proxmox](https://img.shields.io/badge/Proxmox-E6792A?style=for-the-badge&logo=proxmox&logoColor=white)
-![Docker](https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white)
-![Bash](https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white)
-![PHP](https://img.shields.io/badge/PHP-777BB4?style=for-the-badge&logo=php&logoColor=white)
-![Go](https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white)
-![Mailcow](https://img.shields.io/badge/Mailcow-93C54B?style=for-the-badge&logo=&logoColor=white)
-![SOGo](https://img.shields.io/badge/SOGo-0073B4?style=for-the-badge&logo=&logoColor=white)
-![Roundcube](https://img.shields.io/badge/Roundcube-33A5E5?style=for-the-badge&logo=&logoColor=white)
-![Hetzner](https://img.shields.io/badge/Hetzner-D50C2D?style=for-the-badge&logo=hetzner&logoColor=white)
+<hr>
 
----
+<h3>🚀 Ce que nous proposons</h3>
+<ul>
+<li><strong>Intégration de Solutions Open Source</strong> : Nous vous aidons à déployer et configurer les meilleurs outils open source, adaptés à votre échelle, que vous soyez un particulier, une TPE/PME ou une association.</li>
+<li><strong>Développement sur Mesure</strong> : Nous transformons vos idées en solutions logicielles robustes et évolutives.</li>
+<li><strong>Conseil & Expertise Technique</strong> : Notre expérience est à votre service pour vous guider dans vos choix technologiques.</li>
+</ul>
 
-### 🚀 Ce que nous proposons
+<hr>
 
-Nous nous spécialisons dans l'accompagnement de projets à taille humaine, en proposant des services sur mesure pour répondre à vos besoins spécifiques.
+<h3>⭐ Notre Projet Phare : Mailcow Haute Disponibilité</h3>
 
-*   **Intégration de Solutions Open Source** : Nous vous aidons à déployer et configurer les meilleurs outils open source, adaptés à votre échelle, que vous soyez un particulier, une TPE/PME ou une association.
-*   **Développement sur Mesure** : Nous transformons vos idées en solutions logicielles robustes et évolutives.
-*   **Conseil & Expertise Technique** : Notre expérience est à votre service pour vous guider dans vos choix technologiques.
+<p>Notre cœur de métier est la <strong>conception de solutions de messagerie</strong> robustes et fiables. C'est pourquoi nous avons créé et nous maintenons une solution de <strong>Mailcow en Haute Disponibilité</strong>.</p>
 
----
+<p>Ce projet, basé sur <a href="https://github.com/mailcow/mailcow-dockerized">mailcow</a>, garantit une continuité de service et une fiabilité exceptionnelles pour les infrastructures de messagerie. <em>Bien que la messagerie soit notre domaine de prédilection, notre curiosité nous pousse à explorer tous types de projets stimulants !</em></p>
 
-### ⭐ Notre Projet Phare : Mailcow Haute Disponibilité
+<p>➡️ <strong>Découvrez le projet : <a href="https://github.com/worddevfr/mailcow-high-availability">Mailcow High Availability</a></strong></p>
 
-Notre cœur de métier est la **conception de solutions de messagerie** robustes et fiables. C'est pourquoi nous avons créé et nous maintenons une solution de **Mailcow en Haute Disponibilité**.
+<hr>
 
-Ce projet, basé sur [mailcow](https://github.com/mailcow/mailcow-dockerized), garantit une continuité de service et une fiabilité exceptionnelles pour les infrastructures de messagerie. ***Bien que la messagerie soit notre domaine de prédilection, notre curiosité nous pousse à explorer tous types de projets stimulants !***
+<h3>💬 Parlons de votre projet</h3>
 
-➡️ **Découvrez le projet : [Mailcow High Availability](https://github.com/worddevfr/mailcow-high-availability)**
+<p>Nous sommes toujours ouverts à de nouvelles collaborations. Si vous avez une idée, un besoin spécifique ou si vous souhaitez simplement échanger, n'hésitez pas à nous contacter.</p>
 
----
+<p>&nbsp;&nbsp; <strong>📧 E-mail</strong>: <span style="font-weight: bold; font-size: 18px;">
 
-### 💬 Parlons de votre projet
-
-Nous sommes toujours ouverts à de nouvelles collaborations. Si vous avez une idée, un besoin spécifique ou si vous souhaitez simplement échanger, n'hésitez pas à nous contacter.
-
-   &nbsp; &nbsp; **📧 E-mail**: <!-- <header> -->
+<!-- <header> -->
 <span style="font-weight: bold; font-size: 18px;">
 &#109;&#97;&#105;<!-- &#1 -->&#108;&#99;<!-- <br> && \n ok -->&#111;&#119;&#105;</span><!-- </header> --><!-- <footer> --><span style="font-weight: bold; font-size: 16px;"><!-- &#{0-9}; -->&#115;&#112;<!-- Github profil start  with -->&#64;<!-- domaine -->&#103;&#109;&#97;<!-- domain.tld -->&#105;&#108;<!-- point -->&#46;<!-- &#{0-9}; -->&#99;<!-- ext: .com, .org -->&#111;&#109;
 </span>
 <!-- </footer> -->
+
+</span></p>
 
 </details>
 
 <script>
-document.querySelectorAll('summary').forEach(summary => {
-  summary.addEventListener('click', () => {
-    const details = summary.parentElement;
-    details.open = !details.open;
-  });
+document.querySelectorAll('details').forEach(details => {
+    const summary = details.querySelector('summary');
+
+    // Fonction pour mettre à jour le texte du summary
+    function updateSummaryText(d) {
+        if (d.id === 'english-menu') {
+            if (d.open) {
+                summary.textContent = summary.textContent.replace('(click to expand)', '(click to collapse)');
+            } else {
+                summary.textContent = summary.textContent.replace('(click to collapse)', '(click to expand)');
+            }
+        } else if (d.id === 'french-menu') {
+            if (d.open) {
+                summary.textContent = summary.textContent.replace('(cliquer pour déplier)', '(cliquer pour replier)');
+            } else {
+                summary.textContent = summary.textContent.replace('(cliquer pour replier)', '(cliquer pour déplier)');
+            }
+        }
+    }
+
+    // Initial update
+    updateSummaryText(details);
+
+    summary.addEventListener('click', () => {
+        setTimeout(() => {
+            // Fermer tous les autres détails
+            document.querySelectorAll('details').forEach(other => {
+                if (other !== details) other.open = false;
+                updateSummaryText(other);
+            });
+
+            // Mettre à jour le summary du menu cliqué
+            updateSummaryText(details);
+        }, 10); // attendre le toggle natif
+    });
 });
+
 </script>
 
 </body>
